option java_outer_classname = "LCVehiclePassTimes";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.statisticsdata.entity";

import "core/proto/webservice/statisticsdata/entity/SonAreaTimes.proto";
message VehiclePassTimes{
	required int64 _id =1;
	required int32 times =2;
	repeated SonAreaTimes sonAreaTimes =3;
}