option java_outer_classname = "LCVehiclePassTimesRecords";
option java_package = "com.navinfo.opentsp.platform.location.protocol.webservice.statisticsdata";

import "core/proto/webservice/statisticsdata/entity/VehiclePassTimes.proto";
message VehiclePassTimesRecords{
	required int32			statusCode		=1;
	optional int32			totalRecords	=2;
	repeated VehiclePassTimes	dataList		=3;
}